--- a/_scss/shared/_header.scss
+++ b/_scss/shared/_header.scss
@@ -19,7 +19,7 @@
   }
 
   .intro {
-    padding-top: 120px;
+    padding-top: 100px;
     font-family: $main-font;
     
     .heading {
